start functions to raster reading

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MidPalSet
-Title: Research compendium for Assessing the spatial patterning of Middle Paleolithic human settlement in westernmost Iberia'
+Title: Research compendium for 'Assessing the spatial patterning of Middle Paleolithic human settlement in westernmost Iberia'
 Version: 0.0.0.9000
 Authors@R:
     person(given = "Joao",
